<resources>
    <string name="app_name">ECommerce</string>
    <string name="hello_world">Hello World!</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
    <string name="logo">Logo</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="activity_with_data">pindah activity dengan data</string>
    <string name="dial_a_number">Dial a number</string>
    <string name="data_received">Data Diterima</string>
    <string name="tv_msg_login">Hello Again!\nWelcome back</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter your email Address</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_account">Create New Account</string>
    <string name="tv_msg_register">Hello! \nSignUp to \nget started</string>
    <string name="fullname">Fullname</string>
    <string name="hint_fullname">Enter your Fullname</string>
    <string name="tv_title_home">Toko smi untirta</string>
    <string name="tv_subtitle_home">Studio Manajemen Industri</string>
    <string name="tv_browse_room">Browse the Room \nThat we Designed for you</string>
    <string name="live_room">Live Room</string>
    <string name="children_room">Children Room</string>
    <string name="bed_room">Bed Room</string>
    <string name="decoration">Decoration</string>
    <string name="tv_just_arrived">Just arrived \nThis Summer for you</string>
    <string name="cart">Add to Cart</string>
    <string name="about_the_product">About the product</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="complete_name">Complete Name</string>
    <string name="hint_complete_name">Enter your Complete Name</string>
    <string name="address">Address</string>
    <string name="hint_address">Enter your full Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_phone_number">Enter your Phone Number</string>
    <string name="choose_courier">Choose Courier</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="ah_yes_it_s_success">Ah yes it\'s success!</string>
    <string name="tv_subtitle_success">Furniture yang and beli akan kami \nkirimkan saat ini juga so now please sit \ntight and be ready for it</string>
    <string name="back_to_shop">Back to Shop</string>
    <string name="format_price">Rp%1$s</string>
</resources>