<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".implement.feature.cart.CartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/fira_sans_bold"
            android:text="@string/tv_title_home"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle_home"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/fira_sans"
            android:text="@string/tv_subtitle_home"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg"
            app:layout_constraintStart_toStartOf="@+id/bg" />

        <ImageView
            android:id="@+id/ic_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_cart"
            app:layout_constraintBottom_toBottomOf="@+id/tv_subtitle_home"
            app:layout_constraintEnd_toEndOf="@+id/bg"
            app:layout_constraintTop_toTopOf="@+id/tv_title_home" />

        <com.nex3z.notificationbadge.NotificationBadge
            android:id="@+id/badge"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:nbBackground="@drawable/bg_badge"
            app:nbMaxTextLength="1"
            app:layout_constraintTop_toTopOf="@+id/ic_cart"
            app:layout_constraintStart_toEndOf="@+id/ic_cart"/>

        <TextView
            android:id="@+id/tv_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shopping_cart"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_shopping_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_cart"
            tools:itemCount="1"/>

        <View
            android:id="@+id/bg_shipping_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@color/white_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_shipping_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="Shipping Details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/bg_shipping_details"
            app:layout_constraintStart_toStartOf="@+id/bg_shipping_details"
            app:layout_constraintEnd_toEndOf="@id/bg_shipping_details"/>

        <TextView
            android:id="@+id/tv_complete_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/complete_name"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans"
            app:layout_constraintTop_toBottomOf="@+id/tv_shipping_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_complete_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text_rounded"
            android:inputType="text"
            android:hint="@string/hint_complete_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_complete_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans"
            app:layout_constraintTop_toBottomOf="@+id/et_complete_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text_rounded"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text_rounded"
            android:inputType="text"
            android:hint="@string/hint_address"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/phone_number"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans"
            app:layout_constraintTop_toBottomOf="@+id/et_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text_rounded"
            android:inputType="phone"
            android:hint="@string/hint_phone_number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_choose_courier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choose_courier"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_courier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_courier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_courier"/>

        <TextView
            android:id="@+id/tv_choose_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choose_payment"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/rv_courier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_courier"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_button_primary_rounded"
            android:fontFamily="@font/fira_sans_medium"
            android:letterSpacing="0.05346"
            android:text="@string/checkout_now"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_payment"
            app:layout_constraintBottom_toBottomOf="@id/bg_shipping_details"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>