<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learn.ui.fragment.MainFragment">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/move_activity"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_move_activity_with_data"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/activity_with_data"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/btn_move_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/dial_a_number"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/btn_move_activity_with_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>