<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".implement.feature.success.SuccessActivity">

    <ImageView
        android:id="@+id/ic_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_success_transaction"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ah_yes_it_s_success"
        android:fontFamily="@font/fira_sans_medium"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/ic_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tv_subtitle_success"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_to_shop"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button_primary_rounded"
        android:text="@string/back_to_shop"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/fira_sans_medium"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>